link to application portfolio

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <a class="nav-link nav-skills" href="#skills">Compétences</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link nav-skills" href="#work">Portfolio</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link nav-contact" href="#contact">Contact</a>
         </li>
       </ul>
@@ -152,9 +155,11 @@
         <p>Electro-technicien</p>
       </div>
       <div class="col">
-        <p><img class="logos-formation" src="img/icons/school/medal.svg" alt="logo diplôme"> Brevet d'Etudes Professionnelles
+        <p><img class="logos-formation" src="img/icons/school/medal.svg" alt="logo diplôme"> Brevet d'Etudes
+          Professionnelles
         </p>
-        <p><img class="logos-formation" src="img/icons/school/loc.svg" alt="logo localisation"> Lycée professionnel Verdun (55)
+        <p><img class="logos-formation" src="img/icons/school/loc.svg" alt="logo localisation"> Lycée professionnel
+          Verdun (55)
         </p>
       </div>
     </div>
@@ -219,7 +224,7 @@
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
         <p>Mission d'assitance opérationnelle.<br>Séjour Tchad, Répubublique centrafricaine.</p>
       </div>
-    </div> 
+    </div>
   </div>
 
 
@@ -285,8 +290,8 @@
           you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
       </div>
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Administration système">
-        <p class="social-header">PUNCTUAL</p>
+        <img class="social-logo" src="./img/icons/skills/database.svg" alt="Administration système">
+        <p class="social-header">Admin système</p>
         <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
           and a respect for other people's time.</p>
       </div>
@@ -299,6 +304,103 @@
       </div>
     </div>
   </div>
+
+  <!-- ////////////////////////////////////////////// WORK ////////////////////////////////////////////// -->
+  <div class="bgimg-5"></div>
+  <div id="work">
+    <h3 class="title-section">Quelques réalisations</h3>
+  </div>
+  <div class="container">
+    <div class="row">
+      <ul class="cards">
+
+        <!-- project 1 -->
+        <div class="col-sm-4">
+          <li class="f1_container">
+            <div class="f1_card shadow">
+              <div class="front face">
+                <img class="img-cards" src="img/pass.jpg" alt="a" />
+                <h3 class="title-cards">Password generator</h3>
+              </div>
+              <div class="back face center">
+                <h3>Password generator</h3>
+                <p>Application javascript de création de mot de passe selon un modèle défini. Utilisation de regex </p>
+                <a href="https://c3soft.github.io/CreateMDP/" target="_blank" rel="noopener">Voir</a>
+              </div>
+            </div>
+          </li>
+        </div>
+        <!-- project 2 -->
+        <div class="col-sm-4">
+          <li class="f1_container">
+            <div class="f1_card shadow">
+              <div class="front face">
+                <img class="img-cards" src="img/meteo.jpg" alt="a" />
+                <h3 class="title-cards">Station météo</h3>
+              </div>
+              <div class="back face center">
+                <h3>Station météo</h3>
+                <p>Let yourself be carried away in a world where the real and the imaginary are one, in the
+                  company of our talented magicians, discover a wonderful world limited only by your
+                  imagination.</p>
+                <a href="https://c3soft.github.io/meteo-api-js/" target="_blank" rel="noopener">Voir</a>
+              </div>
+            </div>
+          </li>
+        </div>
+        <!-- project 3 -->
+        <div class="col-sm-4">
+          <li class="f1_container">
+            <div class="f1_card shadow">
+              <div class="front face">
+                <img class="img-cards" src="img/greenschool.jpg" alt="a" />
+                <h3 class="title-cards">Green school</h3>
+              </div>
+              <div class="back face center">
+                <h3>Green school</h3>
+                <p>Tame the untameable in the company of our tamers, between roar and razor-sharp claws,
+                  watch these fierce felines turn into sweet kittens.</p>
+              </div>
+            </div>
+          </li>
+        </div>
+        <!-- project 4 -->
+        <div class="col-sm-4">
+          <li class="f1_container">
+            <div class="f1_card shadow">
+              <div class="front face">
+                <img class="img-cards" src="img/aid.png" alt="a" />
+                <h3 class="title-cards">AID</h3>
+              </div>
+              <div class="back face center">
+                <h3>AID</h3>
+                <p>Tame the untameable in the company of our tamers, between roar and razor-sharp claws,
+                  watch these fierce felines turn into sweet kittens.</p>
+              </div>
+            </div>
+          </li>
+        </div>
+        <!-- project 5 -->
+        <div class="col-sm-4">
+          <li class="f1_container">
+            <div class="f1_card shadow">
+              <div class="front face">
+                <img class="img-cards" src="img/cerbere.JPG" alt="a" />
+                <h3 class="title-cards">AID</h3>
+              </div>
+              <div class="back face center">
+                <h3>AID</h3>
+                <p>Tame the untameable in the company of our tamers, between roar and razor-sharp claws,
+                  watch these fierce felines turn into sweet kittens.</p>
+              </div>
+            </div>
+          </li>
+        </div>
+
+      </ul>
+    </div>
+  </div>
+
 
   <!-- ////////////////////////////////////////////// CONTACT ////////////////////////////////////////////// -->
   <div class="bgimg-4"></div>
