--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       <ul class="cards">
 
         <!-- project 1 -->
-        <div class="col-sm-4">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <li class="f1_container">
             <div class="f1_card shadow">
               <div class="front face">
@@ -331,7 +331,7 @@
           </li>
         </div>
         <!-- project 2 -->
-        <div class="col-sm-4">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <li class="f1_container">
             <div class="f1_card shadow">
               <div class="front face">
@@ -343,13 +343,13 @@
                 <p>Let yourself be carried away in a world where the real and the imaginary are one, in the
                   company of our talented magicians, discover a wonderful world limited only by your
                   imagination.</p>
-                <a href="https://c3soft.github.io/meteo-api-js/" target="_blank" rel="noopener">Voir</a>
+                <a href="https://meteo-api-js.vercel.app/" target="_blank" rel="noopener">Voir</a>
               </div>
             </div>
           </li>
         </div>
         <!-- project 3 -->
-        <div class="col-sm-4">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <li class="f1_container">
             <div class="f1_card shadow">
               <div class="front face">
@@ -365,7 +365,7 @@
           </li>
         </div>
         <!-- project 4 -->
-        <div class="col-sm-4">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <li class="f1_container">
             <div class="f1_card shadow">
               <div class="front face">
@@ -381,7 +381,7 @@
           </li>
         </div>
         <!-- project 5 -->
-        <div class="col-sm-4">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <li class="f1_container">
             <div class="f1_card shadow">
               <div class="front face">
