change color navbar toggler

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <!-- ////////////////////////////////////////////// NAVBAR /////////////////////////////////////////////////// -->
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light opaque-navbar">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark opaque-navbar">
     <a class="navbar-brand" href="#">
       <img src="./img/icons/home/curriculum-logo.svg" width="30" height="30" class="d-inline-block align-top"
         alt="logo curiculum vitaé" loading="lazy">
