resize image parallax

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
           <span class="letters">Développeur Web</span>
         </span>
       </h1>
-      <a class="btnContactDirect" href="#contact"><button type="button" class="btnContact"> CONTACTEZ MOI</button></a>
+      <!-- <a class="btnContact" href="#contact"> CONTACTEZ MOI</a> -->
+      <!-- <a class="btnContactDirect" href="#contact"><button type="button" class="btnContact"> CONTACTEZ MOI</button></a> -->
+      <button type="button" class="btnContact"> CONTACTEZ MOI</button>
     </div>
     <div class="copyright">© 2020 by Pascal Jurion.</div>
 
@@ -190,7 +192,7 @@
       <div class="box b1" data-anim="1">
         <div class="title-experience">
           <h3>Développeur web</h3>
-          <img class="logo-entreprise-arc" src="./img/icons/experience/arc.png" alt="Alain Renault Communication">
+          <img class="logo-entreprise-arc" src="./img/icons/buisness/arc.png" alt="Alain Renault Communication">
         </div>
         <p>2020</p>
         <p>Alain Renault Communication - Reims (51)</p>
@@ -199,7 +201,7 @@
       <div class="box b2" data-anim="2">
         <div class="title-experience">
           <h3>Technicien methode</h3>
-          <img class="logo-entreprise-soupl" src="./img/icons/experience/soupletube.png" alt="Entreprise soupketube">
+          <img class="logo-entreprise-soupl" src="./img/icons/buisness/soupletube.png" alt="Entreprise soupketube">
         </div>
         <p>2005 / 2016</p>
         <p>Eurotube - Chimay (Belgique)</p>
@@ -218,7 +220,7 @@
       <div class="box b4" data-anim="4">
         <div class="title-experience">
           <h3>Engagé volontaire</h3>
-          <img class="logo-entreprise-68" src="./img/icons/experience/68raa.png" alt="">
+          <img class="logo-entreprise-68" src="./img/icons/buisness/68raa.png" alt="">
         </div>
         <p>1987 / 1990</p>
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
@@ -305,7 +307,7 @@
     </div>
   </div>
 
-  <!-- ////////////////////////////////////////////// WORK ////////////////////////////////////////////// -->
+  <!-- ////////////////////////////////////////////// PROJECTS ////////////////////////////////////////////// -->
   <div class="bgimg-5"></div>
   <div id="work">
     <h3 class="title-section">Quelques réalisations</h3>
@@ -315,8 +317,8 @@
       <ul class="cards">
 
         <!-- project 1 -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <li class="f1_container">
+        <li class="f1_container">
+          <!-- <div class="col-sm-12 col-md-6 col-lg-4"> -->
             <div class="f1_card shadow">
               <div class="front face">
                 <img class="img-cards" src="img/pass.jpg" alt="a" />
@@ -327,12 +329,12 @@
                 <p>Application javascript de création de mot de passe selon un modèle défini. Utilisation de regex </p>
                 <a href="https://c3soft.github.io/CreateMDP/" target="_blank" rel="noopener">Voir</a>
               </div>
-            </div>
+              </div>
+            <!-- </div> -->
           </li>
-        </div>
         <!-- project 2 -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <li class="f1_container">
+        <li class="f1_container">
+          <!-- <div class="col-sm-12 col-md-6 col-lg-4"> -->
             <div class="f1_card shadow">
               <div class="front face">
                 <img class="img-cards" src="img/meteo.jpg" alt="a" />
@@ -345,12 +347,12 @@
                   imagination.</p>
                 <a href="https://meteo-api-js.vercel.app/" target="_blank" rel="noopener">Voir</a>
               </div>
-            </div>
+              </div>
+            <!-- </div> -->
           </li>
-        </div>
         <!-- project 3 -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <li class="f1_container">
+        <li class="f1_container">
+          <!-- <div class="col-sm-12 col-md-6 col-lg-4"> -->
             <div class="f1_card shadow">
               <div class="front face">
                 <img class="img-cards" src="img/greenschool.jpg" alt="a" />
@@ -362,14 +364,14 @@
                   watch these fierce felines turn into sweet kittens.</p>
               </div>
             </div>
-          </li>
-        </div>
-        <!-- project 4 -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
+          <!-- </div> -->
+        </li>
+          <!-- project 4 -->
           <li class="f1_container">
+          <!-- <div class="col-sm-12 col-md-6 col-lg-4"> -->
             <div class="f1_card shadow">
               <div class="front face">
-                <img class="img-cards" src="img/aid.png" alt="a" />
+                <img class="img-cards" src="./img/icons/project/aidPS.jpg" alt="a" />
                 <h3 class="title-cards">AID</h3>
               </div>
               <div class="back face center">
@@ -378,11 +380,11 @@
                   watch these fierce felines turn into sweet kittens.</p>
               </div>
             </div>
+          <!-- </div> -->
           </li>
-        </div>
         <!-- project 5 -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <li class="f1_container">
+        <li class="f1_container">
+          <!-- <div class="col-sm-12 col-md-6 col-lg-4"> -->
             <div class="f1_card shadow">
               <div class="front face">
                 <img class="img-cards" src="img/cerbere.JPG" alt="a" />
@@ -394,8 +396,8 @@
                   watch these fierce felines turn into sweet kittens.</p>
               </div>
             </div>
+          <!-- </div> -->
           </li>
-        </div>
 
       </ul>
     </div>
