resize image parallax

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div>
 
   <!-- ////////////////////////////////////////////// SCHOOL ////////////////////////////////////////////// -->
-  <div class="img-fluid bgimg-1"></div>
+  <div class="bgimg-1"></div>
 
   <div id="school">
     <h3 class="title-section">Formations</h3>
