resize image parallax

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
   </div>
 
   <!-- ////////////////////////////////////////////// SCHOOL ////////////////////////////////////////////// -->
-  <div class="bgimg-1"></div>
+  <div class="bgimg-1">
+    <img src="./img/schoolm.jpg" alt="">
+  </div>
 
   <div id="school">
     <h3 class="title-section">Formations</h3>
