--- a/index.html
+++ b/index.html
@@ -438,6 +438,24 @@
     </div>
   </div>
 
+
+
+
+
+
+  <!-- cartes -->
+  <div class="flip-box">
+    <div class="flip-box-inner">
+      <div class="flip-box-front">
+        <h2>Front</h2>
+      </div>
+      <div class="flip-box-back">
+        <h2>Back</h2>
+      </div>
+    </div>
+  </div>
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
