resize image parallax

--- a/index.html
+++ b/index.html
@@ -443,14 +443,14 @@
 
 
 
-  <!-- cartes -->
+  <!-- cartes 
   <div class="flipCard"> 
     <div class="card"> 
-      <div class="face front">Front</div> 
+      <div class="face front"></div> 
       <div class="face back">
-        <p>abcdefijklmnopqrstuvwxyz</p></div> 
+        <p>abcdefijklmnopqrstuvwx</p></div> 
     </div> 
-  </div> 
+  </div> -->
   
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
